--- a/Informe Final/Capitulos/Capitulo3/cap3sec2.tex
+++ b/Informe Final/Capitulos/Capitulo3/cap3sec2.tex
@@ -1,6 +1,6 @@
 \section{Selección de un modelo de ciclo de vida}
 \paragraph\indent
-El ciclo de vida para el desarrollo del sistema de gestión de la muebleria es el de prototipado evolutivo. Para la selección del mismo se tuvo en cuenta tanto la necesidad de brindar a los usuarios las características del nuevo sistema a medida que estas sean implementadas, como así también las partes volátiles del proyecto.
+El ciclo de vida para el desarrollo del sistema de gestión de la mueblería es el de prototipado evolutivo. Para la selección del mismo se tuvo en cuenta tanto la necesidad de brindar a los usuarios las características del nuevo sistema a medida que estas sean implementadas, como así también las partes volátiles del proyecto.
 \paragraph\indent
 Un prototipo es un sistema a escala que tiene las características del sistema disminuidas. Se usa cuando el cliente no tiene una idea muy detallada de lo que necesita o el ingeniero en software no está muy seguro de la viabilidad de la solución.
 \paragraph\indent
