--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTelas/modificarTela.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTelas/modificarTela.tex
@@ -39,7 +39,7 @@
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 }
-ewcommand{\caseUseAvailability}{} %Requisitos funcionales: Disponibilidad
+\renewcommand{\caseUseAvailability}{} %Requisitos funcionales: Disponibilidad
 
 \item Caso de uso \caseUseName
 \input{Capitulos/Capitulo4/CasosUso/generalTable.tex}
