--- a/Informe Final/Capitulo8.tex
+++ b/Informe Final/Capitulo8.tex
@@ -4,16 +4,19 @@
 
 \section{Sobre el proyecto}
 \paragraph\indent
-En primera medida desarrollamos el proyecto cumpliendo todos los objetivos que nos propusimos al momento de iniciar. Pudimos poner en práctica conocimientos incorporados en la carrera de Ingeniería en Computación. También pudimos aprender y profundizar acerca de nuevas herramientas y temáticas necesarias para el desarrollo de este proyecto, y para nuestra formación profesional.
+En primera medida se desarrollo el proyecto cumpliendo con los objetivos propuestos incialmente. Se puso en práctica conocimientos incorporados en la carrera Ingeniería en Computación. Tammbien se logro aprender y profundizar acerca de nuevas herramientas necesarias para el desarrollo del proyecto y para una mejor formación profesional.
+% En primera medida desarrollamos el proyecto cumpliendo todos los objetivos que nos propusimos al momento de iniciar. Pudimos poner en práctica conocimientos incorporados en la carrera de Ingeniería en Computación. También pudimos aprender y profundizar acerca de nuevas herramientas y temáticas necesarias para el desarrollo de este proyecto, y para nuestra formación profesional.
 
 \paragraph\indent
-El sistema permite llevar a cabo todo el proceso que se inicia con la presupuestación y finaliza con la entrega de los productos, involucrando la venta y fabricación de los mismos. De esta manera conseguimos optimizar los procesos que se llevan a cabo en la mueblería.
+El sistema permite llevar a cabo todo el proceso que se inicia con la presupuestación y finaliza con la entrega de los productos, involucrando la venta y fabricación de los mismos. De esta manera se consiguio optimizar los procesos que se llevan a cabo en la mueblería.
+% El sistema permite llevar a cabo todo el proceso que se inicia con la presupuestación y finaliza con la entrega de los productos, involucrando la venta y fabricación de los mismos. De esta manera conseguimos optimizar los procesos que se llevan a cabo en la mueblería.
 
 \paragraph\indent
 El sistema permite generar y actualizar la lista de precios de forma automática, reduciendo los tiempos que tomaba generarlas y distribuirlas en todas las sucursales de la mueblería. Además otorga la posibilidad de conocer en tiempo real la disponibilidad de los productos en las distintas sucursales de la empresa.
 
 \paragraph\indent
-Al usar tecnologías web, conseguimos que el sistema pueda ser ejecutado mediante cualquier navegador web de los sistemas operativos de mayor uso en la actualidad, Windows, Linux y MacOS.
+Al usar tecnologías web, se consiguio que el sistema pueda ser ejecutado mediante cualquier navegador web de los sistemas operativos de mayor uso en la actualidad, Windows, Linux y MacOS.
+% Al usar tecnologías web, conseguimos que el sistema pueda ser ejecutado mediante cualquier navegador web de los sistemas operativos de mayor uso en la actualidad, Windows, Linux y MacOS.
 
 \paragraph\indent
 La implementación del sistema permitirá llevar a cabo un estudio estadístico, mejorando la toma de decisiones de la mueblería. Además el sistema cuenta con la función de generar documentos de forma digital, reemplazando los manuscritos, con el objetivo de reducir el impacto ambiental y el tiempo para su elaboración.
